# SlimTracin

./: CMakeLists.txt  README.md
src/: SlimRayTracer.h  bmp2texture.c  obj2mesh.c
src/SlimRayTracer/: app.h
src/SlimRayTracer/core/: base.h  init.h  string.h  types.h
src/SlimRayTracer/math/: vec3.h
src/SlimRayTracer/render/: AABB.h  SSB.h  raytracer.h
src/SlimRayTracer/render/acceleration_structures/: builder_top_down.h
src/SlimRayTracer/render/shaders/: common.h  shade.h  trace.h
src/SlimRayTracer/render/shaders/closest_hit/: classic.h  debug.h  fog.h  recursive.h  reflection.h  surface.h
src/SlimRayTracer/render/shaders/intersection/: box.h  mesh.h  primitives.h  quad.h  sphere.h  tetrahedra.h
src/SlimRayTracer/scene/: io.h
src/SlimRayTracer/viewport/: manipulation.h
src/SlimTracin/: app.h
src/SlimTracin/core/: base.h  init.h  text.h  time.h  types.h
src/SlimTracin/math/: vec2.h  vec3.h
src/SlimTracin/render/: AABB.h  SSB.h  raytracer.h
src/SlimTracin/render/acceleration_structures/: builder_bottom_up.h  builder_top_down.h
src/SlimTracin/render/shaders/: common.h  trace.h
src/SlimTracin/render/shaders/closest_hit/: classic.h  lights.h  reflection.h  surface.h
src/SlimTracin/render/shaders/intersection/: box.h  mesh.h  primitives.h  quad.h  sphere.h  tetrahedra.h
src/SlimTracin/scene/: box.h  io.h  primitive.h  texture.h
src/SlimTracin/shapes/: edge.h  line.h
src/SlimTracin/viewport/: hud.h  manipulation.h  viewport.h
src/examples/: 01_Lights.c  01_Lights.cu  02_Geometry.c  02_Geometry.cu  03_BlinnPhong.c  03_BlinnPhong.cu  04_GlassMirror.c  04_GlassMirror.cu  05_PBR.c  05_PBR.cu  06_AreaLights.c  06_AreaLights.cu  07_Meshes.c  07_Meshes.cu  08_Modes.c  08_Modes.cu  09_Textures.c  09_Textures.cu  1_lights.c  1_shapes.c  1_shapes.cu  2_meshes.c  2_meshes.cu  2_shapes.c  3_area_lights.c  3_area_lights.cu  3_materials_classic_shaders.c  3_meshes.c  4_materials_reflective_refractive.c  5_materials_emissive.c  5_meshes.c  6_meshes.c  7_modes.c  8_XPU.c  8_XPU.cu  _common.h  area_lights.c  area_lights.scene  demo_scene.c  demo_scene.cu  (+7 more)
